syntax = "proto3";

package xxx.package1;

option java_multiple_files = true;
option java_package = "no.entur.protoc.interfaces.package1";

import "xsd.proto";
import "file2.proto";



message MidLevel {

  option (xsd.base_type) = "xxx.package2.TopLevel";

  double top_level_double_val = 1;
  float top_level_float_val = 2;
  int64 top_level_int64_val = 3;
  uint64 top_level_uint64_val = 4;
  int32 top_level_int32_val = 5;
  fixed64 top_level_fixed64_val = 6;
  fixed32 top_level_fixed32_val = 7;
  bool top_level_bool_val = 8;
  string top_level_string_val = 9;
  bytes top_level_bytes_val = 10;
  sfixed32 top_level_sfixed32_val = 11;
  sfixed64 top_level_sfixed64_val = 12;
  sint32 top_level_sint32_val = 13;
  sint64 top_level_sint64_val = 14;
  xxx.package2.SimpleType top_level_message_val = 15;
  xxx.package2.EnumType top_level_enum_val = 16;

  oneof TopLevelOneOf {
    string top_level_one_of_string_val= 50;
    double top_level_one_of_double_val= 51;
  }

  repeated double top_level_repeated_double_val = 101;
  repeated float top_level_repeated_float_val = 102;
  repeated int64 top_level_repeated_int64_val = 103;
  repeated uint64 top_level_repeated_uint64_val = 104;
  repeated int32 top_level_repeated_int32_val = 105;
  repeated fixed64 top_level_repeated_fixed64_val = 106;
  repeated fixed32 top_level_repeated_fixed32_val = 107;
  repeated bool top_level_repeated_bool_val = 108;
  repeated string top_level_repeated_string_val = 109;
  repeated bytes top_level_repeated_bytes_val = 110;
  repeated sfixed32 top_level_repeated_sfixed32_val = 111;
  repeated sfixed64 top_level_repeated_sfixed64_val = 112;
  repeated sint32 top_level_repeated_sint32_val = 113;
  repeated sint64 top_level_repeated_sint64_val = 114;
  repeated xxx.package2.SimpleType top_level_repeated_message_val = 115;
  repeated xxx.package2.EnumType top_level_repeated_enum_val = 116;

  string mid_level_string_val = 1000;

  // Inner types are redefined in each message and should not be added to interfaces
  InnerType inner_type_val = 200;
  repeated InnerType inner_type_repeated_val = 201;
  message InnerType {
    string inner_type_string_val= 1;
  }

}

message BottomLevel {

  option (xsd.base_type) = "MidLevel";

  double top_level_double_val = 1;
  float top_level_float_val = 2;
  int64 top_level_int64_val = 3;
  uint64 top_level_uint64_val = 4;
  int32 top_level_int32_val = 5;
  fixed64 top_level_fixed64_val = 6;
  fixed32 top_level_fixed32_val = 7;
  bool top_level_bool_val = 8;
  string top_level_string_val = 9;
  bytes top_level_bytes_val = 10;
  sfixed32 top_level_sfixed32_val = 11;
  sfixed64 top_level_sfixed64_val = 12;
  sint32 top_level_sint32_val = 13;
  sint64 top_level_sint64_val = 14;
  xxx.package2.SimpleType top_level_message_val = 15;
  xxx.package2.EnumType top_level_enum_val = 16;

  oneof TopLevelOneOf {
    string top_level_one_of_string_val= 50;
    double top_level_one_of_double_val= 51;
  }

  repeated double top_level_repeated_double_val = 101;
  repeated float top_level_repeated_float_val = 102;
  repeated int64 top_level_repeated_int64_val = 103;
  repeated uint64 top_level_repeated_uint64_val = 104;
  repeated int32 top_level_repeated_int32_val = 105;
  repeated fixed64 top_level_repeated_fixed64_val = 106;
  repeated fixed32 top_level_repeated_fixed32_val = 107;
  repeated bool top_level_repeated_bool_val = 108;
  repeated string top_level_repeated_string_val = 109;
  repeated bytes top_level_repeated_bytes_val = 110;
  repeated sfixed32 top_level_repeated_sfixed32_val = 111;
  repeated sfixed64 top_level_repeated_sfixed64_val = 112;
  repeated sint32 top_level_repeated_sint32_val = 113;
  repeated sint64 top_level_repeated_sint64_val = 114;
  repeated xxx.package2.SimpleType top_level_repeated_message_val = 115;
  repeated xxx.package2.EnumType top_level_repeated_enum_val = 116;

  string mid_level_string_val = 1000;

  string bottom_level_string_val = 10000;

  // Inner types are redefined in each message and should not be added to interfaces
  InnerType inner_type_val = 200;
  repeated InnerType inner_type_repeated_val = 201;
  message InnerType {
    string inner_type_string_val= 1;
  }

}

